Responsive fix for full width sections on Safari

--- a/sass/layouts/_no-sidebar.scss
+++ b/sass/layouts/_no-sidebar.scss
@@ -18,4 +18,7 @@ main, aside, .footer-inner, .masthead-inner {
 	max-width: $size__site-max-width;
 	margin: auto;
 	padding: $size__padding-top-and-bottom $size__padding-sides;
+	@media screen and (max-width: $size__site-max-width) {
+		max-width: 100dvw;
+	}
 }
